force-app/main/default/objects/Apttus_Config2__SmartSearchActivityHistory__c/Apttus_Config2__SmartSearchActivityHistory__c.object-meta.xml
<CustomObject>
    <label>Smart Search Activity History</label>
    <nameField>
        <label>Smart Search Activity History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smart Search Activity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>