force-app/main/default/objects/Apttus_Config2__SmartSearchActivityHistory__c/fields/Apttus_Config2__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>