force-app/main/default/objects/Apttus_Config2__SmartSearchActivityHistory__c/fields/Apttus_Config2__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StatusCode__c</fullName>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>